added facebook login

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 ## MongoDB Database URL
 ## ex. mongodb://localhost/myblog-mongo
-MONGO_URI=mongodb+srv://udaysinghkushwah:sentinel@cluster0.kzvfoaj.mongodb.net/my-blog?retryWrites=true&w=majority
+DATABASE_URI=mongodb+srv://udaysinghkushwah:sentinel@cluster0.kzvfoaj.mongodb.net/my-blog?retryWrites=true&w=majority
 
 ## Host name where the application is running
 ## ex. localhost
@@ -11,9 +11,9 @@ HOST=localhost
 ## ex. 3000
 PORT=3000
 
-## UI End Callback URL
+## Front End Callback URL
 ## This is the url where user is redirected after social login is successful
-UI_CALLBACK_URL=http://localhost:4200/auth/callback
+FRONT_END_CALLBACK_URL=http://localhost:4200/auth/callback
 
 ## Google Client ID
 ## It will be used for the authentication process
