fix env file reading issue

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ## MongoDB Database URL
 ## ex. mongodb://localhost/myblog-mongo
-DATABASE_URI=mongodb+srv://udaysinghkushwah:sentinel@cluster0.kzvfoaj.mongodb.net/my-blog?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://udaysinghkushwah:sentinel@cluster0.kzvfoaj.mongodb.net/my-blog?retryWrites=true&w=majority
 
 ## Host name where the application is running
 ## ex. localhost
@@ -13,7 +13,7 @@ PORT=3000
 
 ## Front End Callback URL
 ## This is the url where user is redirected after social login is successful
-FRONT_END_CALLBACK_URL=http://localhost:4200/auth/callback
+UI_CALLBACK_URL=http://localhost:4200/auth/callback
 
 ## Google Client ID
 ## It will be used for the authentication process
